--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.7.10"
+    "@astrojs/svelte": "^7.0.13",
+    "@fontsource-variable/inter": "^5.2.5",
+    "@fontsource-variable/jetbrains-mono": "^5.2.5",
+    "@tailwindcss/vite": "^4.1.5",
+    "astro": "^5.7.10",
+    "svelte": "^5.28.2",
+    "tailwindcss": "^4.1.5",
+    "typescript": "^5.8.3"
   }
 }
