--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro": "^5.7.10",
     "svelte": "^5.28.2",
     "tailwindcss": "^4.1.5",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "wrangler": "^4.14.1"
   }
 }
