--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource-variable/inter": "^5.2.6",
     "@fontsource-variable/jetbrains-mono": "^5.2.6",
     "@indiefellas/astro-adapter-nekoweb": "^1.1.0",
+    "@swup/astro": "^1.6.0",
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.12.0",
     "svelte": "^5.36.8",
