--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "website",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/sitemap": "^3.4.1",
-    "@astrojs/svelte": "^7.1.0",
-    "@fontsource-variable/inter": "^5.2.6",
-    "@fontsource-variable/jetbrains-mono": "^5.2.6",
-    "@indiefellas/astro-adapter-nekoweb": "^1.1.0",
-    "@swup/astro": "^1.6.0",
-    "@tailwindcss/vite": "^4.1.11",
-    "astro": "^5.12.0",
-    "svelte": "^5.36.8",
-    "tailwindcss": "^4.1.11",
-    "typescript": "^5.8.3",
-    "wrangler": "^4.25.0"
-  },
-  "devDependencies": {
-    "vite": "^6.3.5"
-  }
+	"name": "website",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"astro": "astro"
+	},
+	"dependencies": {
+		"@astrojs/sitemap": "^3.4.1",
+		"@astrojs/svelte": "^7.1.0",
+		"@fontsource-variable/inter": "^5.2.6",
+		"@fontsource-variable/jetbrains-mono": "^5.2.6",
+		"@indiefellas/astro-adapter-nekoweb": "^1.1.0",
+		"@swup/astro": "^1.6.0",
+		"@tailwindcss/vite": "^4.1.11",
+		"astro": "^5.12.0",
+		"d3-scale": "^4.0.2",
+		"layerchart": "^2.0.0-next.31",
+		"svelte": "^5.36.8",
+		"tailwindcss": "^4.1.11",
+		"typescript": "^5.8.3",
+		"wrangler": "^4.25.0"
+	},
+	"devDependencies": {
+		"@types/d3-scale": "^4.0.9",
+		"vite": "^6.3.5"
+	}
 }
