--- a/package.json
+++ b/package.json
@@ -9,23 +9,22 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"@astrojs/sitemap": "^3.5.1",
-		"@astrojs/svelte": "^7.1.1",
-		"@fontsource-variable/inter": "^5.2.7",
-		"@fontsource-variable/jetbrains-mono": "^5.2.7",
+		"@astrojs/sitemap": "^3.6.0",
+		"@astrojs/svelte": "^7.2.0",
+		"@fontsource-variable/inter": "^5.2.8",
+		"@fontsource-variable/jetbrains-mono": "^5.2.8",
 		"@indiefellas/astro-adapter-nekoweb": "^3.7.1",
 		"@swup/astro": "^1.7.0",
-		"@tailwindcss/vite": "^4.1.13",
-		"astro": "^5.13.7",
+		"@tailwindcss/vite": "^4.1.14",
+		"astro": "^5.14.3",
 		"d3-scale": "^4.0.2",
-		"layerchart": "^2.0.0-next.38",
-		"svelte": "^5.38.10",
-		"tailwindcss": "^4.1.13",
-		"typescript": "^5.9.2",
-		"wrangler": "^4.37.1"
+		"layerchart": "2.0.0-next.40",
+		"svelte": "^5.39.11",
+		"tailwindcss": "^4.1.14",
+		"typescript": "^5.9.3"
 	},
 	"devDependencies": {
 		"@types/d3-scale": "^4.0.9",
-		"vite": "^7.1.5"
+		"vite": "^7.1.9"
 	}
 }
