--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@tailwindcss/vite": "^4.1.17",
 		"astro": "^5.15.7",
 		"d3-scale": "^4.0.2",
+		"d3-shape": "^3.2.0",
 		"layerchart": "2.0.0-next.43",
 		"svelte": "^5.43.6",
 		"tailwindcss": "^4.1.17",
@@ -25,6 +26,7 @@
 	},
 	"devDependencies": {
 		"@types/d3-scale": "^4.0.9",
+		"@types/d3-shape": "^3.1.7",
 		"vite": "^7.2.2"
 	}
 }
